converts Celsius to Fahrenheit

--- a/Assignment2-2.ipynb
+++ b/Assignment2-2.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "celsius = float(input('Please input the degrees Celsius you want to convert to Fahrenheit'))\n",
     "fahrenheit = celsius * 9 / 5 + 32\n",
-    "print(celsius, 'degrees Celsius is equal to', fahrenheit, 'degrees Fahrenheit.')"
+    "print(celsius, 'degrees Celsius is equal to', fahrenheit, 'degrees Fahrenheit')"
    ]
   }
  ],
