--- a/Assignment4-1.ipynb
+++ b/Assignment4-1.ipynb
@@ -25,16 +25,34 @@
     "while (end.isalpha() == False) or (ord(start) > ord(end)):\n",
     "    print(\"Your input was invalid\")\n",
     "    end = input(\"Please input the ending letter\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
     "i = ord(start)\n",
     "while i < ord(end) + 1:\n",
     "    print (chr(i), end=' ')\n",
     "    i+= 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    start=input('Start?')\n",
+    "    end=input('End?')\n",
+    "    if start < end and start.isalpha() and end.isalpha():\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -48,12 +66,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f99ce459c7a0f9093dec66807a6e7241d1f758b2e574ff2d27df5e1d05a50f5b"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
