--- a/Assignment7-1.ipynb
+++ b/Assignment7-1.ipynb
@@ -26,7 +26,8 @@
     "        list[i] *= -1\n",
     "for i in range(10):\n",
     "    print(f'{list[i]:.2f}', end=' ')\n",
-    "print(average)\n"
+    "print(average)\n",
+    "\n"
    ]
   }
  ],
