--- a/Assignment7-2.ipynb
+++ b/Assignment7-2.ipynb
@@ -27,7 +27,8 @@
     "    if match == False:\n",
     "        print(match)\n",
     "if match == True:\n",
-    "    print(match)\n"
+    "    print(match)\n",
+    "\n"
    ]
   }
  ],
