--- a/Assignment7-5.ipynb
+++ b/Assignment7-5.ipynb
@@ -26,7 +26,8 @@
     "                if num2[loop] != num1[i+loop]:\n",
     "                    match = False\n",
     "                loop += 1\n",
-    "print(match)\n"
+    "print(match)\n",
+    "\n"
    ]
   }
  ],
