--- a/Assignment7-7.ipynb
+++ b/Assignment7-7.ipynb
@@ -34,7 +34,7 @@
     "    for j in range (len(num1) - len(num2)):\n",
     "        num3.append(num1[i])\n",
     "        i+=1\n",
-    "print(num3)"
+    "print(num3)\n"
    ]
   }
  ],
