--- a/Assignment7-8.ipynb
+++ b/Assignment7-8.ipynb
@@ -23,7 +23,7 @@
     "    if idxlst[0] >= 0 and idxlst[1] >= 0 and idxlst[2] >= 0:\n",
     "        are_input_list.append(input_string[i])\n",
     "for i in range(len(are_input_list)):\n",
-    "    print(are_input_list[i], end=' ')"
+    "    print(are_input_list[i], end=' ')\n"
    ]
   }
  ],
