--- a/Lab5-2.ipynb
+++ b/Lab5-2.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The odd numbers are: 44 24 8 34 \n",
-      "110\n"
+      "The odd numbers are: 24 15 27 29 95 \n",
+      "The total sum is 190\n"
      ]
     }
    ],
