--- a/Assignment7-2.ipynb
+++ b/Assignment7-2.ipynb
@@ -27,8 +27,7 @@
     "    if match == False:\n",
     "        print(match)\n",
     "if match == True:\n",
-    "    print(match)\n",
-    "\n"
+    "    print(match)"
    ]
   }
  ],
