--- a/Assignment7-4.ipynb
+++ b/Assignment7-4.ipynb
@@ -20,7 +20,7 @@
     "    numbers.remove(inputNumber)\n",
     "except:\n",
     "    numbers.clear()\n",
-    "print(numbers)\n"
+    "print(numbers)"
    ]
   }
  ],
