--- a/Assignment7-5.ipynb
+++ b/Assignment7-5.ipynb
@@ -26,8 +26,7 @@
     "                if num2[loop] != num1[i+loop]:\n",
     "                    match = False\n",
     "                loop += 1\n",
-    "print(match)\n",
-    "\n"
+    "print(match)"
    ]
   }
  ],
