--- a/Assignment7-6.ipynb
+++ b/Assignment7-6.ipynb
@@ -20,7 +20,7 @@
     "    merged = num1 + num2\n",
     "else:\n",
     "    merged = num2 + num1\n",
-    "print(merged)\n"
+    "print(merged)"
    ]
   }
  ],
