--- a/Assignment7-3.ipynb
+++ b/Assignment7-3.ipynb
@@ -22,7 +22,7 @@
     "        break\n",
     "    if i == len(numbers) - 1:\n",
     "        numbers.append(inputNumber)\n",
-    "print(numbers)\n"
+    "print(numbers)"
    ]
   }
  ],
